--- a/src_data/Data_preprocessing.ipynb
+++ b/src_data/Data_preprocessing.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "perl"
@@ -83,15 +83,13 @@
    ],
    "source": [
     "importlib.reload(bp)\n",
-    "df_combined = bp.unite_usuarios(\n",
+    "df_users, users_cut = bp.unite_usuarios(\n",
     "    usuarios_2024_path,\n",
     "    usuarios_2023_path,\n",
     "    usuarios_2022_path,\n",
     "    usuarios_2021_path,\n",
     "    usuarios_2020_path\n",
-    ")\n",
-    "\n",
-    "# usar solo los datos hasta agosto de 2024"
+    ")"
    ]
   }
  ],
