users data ya limpia

--- a/src_data/Data_preprocessing.ipynb
+++ b/src_data/Data_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "2c6891db",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "perl"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "perl"
@@ -89,7 +89,10 @@
     "    usuarios_2022_path,\n",
     "    usuarios_2021_path,\n",
     "    usuarios_2020_path\n",
-    ")"
+    ")\n",
+    "\n",
+    "# guardamos df_users en un archivo csv\n",
+    "df_users.to_csv(os.path.join(BASE_DIR, '..', 'data', 'clean', 'usuarios_ecobici.csv'), index=False)"
    ]
   }
  ],
