--- a/src_data/Data_preprocessing.ipynb
+++ b/src_data/Data_preprocessing.ipynb
@@ -36,11 +36,13 @@
    "id": "a12a414a",
    "metadata": {},
    "source": [
+    "## Parte 1: Limpieza de datos\n",
     "### Usuarios\n",
-    "Preprocesamos los datos de usuarios:\n",
-    "- eliminar la última columna qu eno esta en 2024\n",
+    "Cambios para limpiar los datos de usuarios:\n",
+    "- eliminar la última columna que no esta en 2024\n",
     "- pasar al mismo formato (sacar comillas donde corresponde)\n",
-    "- eliminar primera filea de features"
+    "- eliminar primera fila con los nombres de las features\n",
+    "- cortar hasta agosto 2024"
    ]
   },
   {
@@ -94,6 +96,28 @@
     "# guardamos df_users en un archivo csv\n",
     "df_users.to_csv(os.path.join(BASE_DIR, '..', 'data', 'clean', 'usuarios_ecobici.csv'), index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "464f0bc4",
+   "metadata": {},
+   "source": [
+    "### Recorridos\n",
+    "\n",
+    "Cambios para limpiar los datos del recorrido:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132f9a4d",
+   "metadata": {
+    "vscode": {
+     "languageId": "perl"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
