--- a/src_data/Data_preprocessing.ipynb
+++ b/src_data/Data_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2c6891db",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "39f2924b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "9dfb92f6",
    "metadata": {
     "vscode": {
      "languageId": "perl"
@@ -68,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "97840035",
    "metadata": {
     "vscode": {
      "languageId": "perl"
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "132f9a4d",
    "metadata": {
     "vscode": {
@@ -117,7 +120,46 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Definimos los paths para los archivos de recorridos de cada año usando os.path.join\n",
+    "recorridos_2024_path = os.path.join(BASE_DIR, '..', 'data', 'raw', 'recorridos', 'trips_2024.csv')\n",
+    "recorridos_2023_path = os.path.join(BASE_DIR, '..', 'data', 'raw', 'recorridos', 'trips_2023.csv')\n",
+    "recorridos_2022_path = os.path.join(BASE_DIR, '..', 'data', 'raw', 'recorridos', 'trips_2022.csv')\n",
+    "recorridos_2021_path = os.path.join(BASE_DIR, '..', 'data', 'raw', 'recorridos', 'trips_2021.csv')\n",
+    "recorridos_2020_path = os.path.join(BASE_DIR, '..', 'data', 'raw', 'recorridos', 'trips_2020.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "perl"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/isabelcastaneda/Desktop/Machine Learning Udesa/proyecto_final/BA_BICIS_MyC/src_data/basic_preprocessing.py:87: DtypeWarning: Columns (17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_2021 = pd.read_csv(csv_2021)\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(bp)\n",
+    "df_recs = bp.limpiar_recorridos(\n",
+    "    recorridos_2024_path,\n",
+    "    recorridos_2023_path,\n",
+    "    recorridos_2022_path,\n",
+    "    recorridos_2021_path,\n",
+    "    recorridos_2020_path\n",
+    ")\n",
+    "\n",
+    "# guardamos df_recs en un archivo csv\n",
+    "df_recs.to_csv(os.path.join(BASE_DIR, '..', 'data', 'clean', 'recorridos_ecobici.csv'), index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -136,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
