--- a/src_data/Data_preprocessing.ipynb
+++ b/src_data/Data_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2c6891db",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "39f2924b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "97840035",
    "metadata": {
     "vscode": {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "132f9a4d",
    "metadata": {
     "vscode": {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "perl"
@@ -142,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/isabelcastaneda/Desktop/Machine Learning Udesa/proyecto_final/BA_BICIS_MyC/src_data/basic_preprocessing.py:87: DtypeWarning: Columns (17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "c:\\Users\\felic\\OneDrive\\Documentos\\GitHub\\TPsM-todos\\BA_BICIS_MyC\\src_data\\basic_preprocessing.py:87: DtypeWarning: Columns (17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_2021 = pd.read_csv(csv_2021)\n"
      ]
     }
@@ -178,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
