--- a/src_data/Data_preprocessing.ipynb
+++ b/src_data/Data_preprocessing.ipynb
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "9a1627d8",
    "metadata": {
     "vscode": {
@@ -1957,8 +1957,23 @@
     "importlib.reload(cd)\n",
     "dataset = cd.crear_dataset_prediccion_bicis(df_unificado, 14)\n",
     "\n",
+    "\n",
     "# Preparar para ML (SIN hora)\n",
     "X, y, feature_names, dataset_ml = cd.preparar_para_ml(dataset, incluir_tiempo=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9958ff7e",
+   "metadata": {
+    "vscode": {
+     "languageId": "perl"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dataset.to_csv(os.path.join(BASE_DIR, '..', 'data', 'processed', 'dataset_14.csv'), index=False)"
    ]
   },
   {
