--- a/src_data/Data_stats.ipynb
+++ b/src_data/Data_stats.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "99d20dee",
    "metadata": {},
    "outputs": [
@@ -109,110 +109,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Llegadas de cada estación: {2.0: 33391, 3.0: 47655, 4.0: 43729, 5.0: 102730, 6.0: 41035, 7.0: 17150, 8.0: 102291, 9.0: 90876, 12.0: 48765, 13.0: 32637, 14.0: 127526, 17.0: 65406, 20.0: 23897, 21.0: 26031, 22.0: 31567, 23.0: 34502, 24.0: 18015, 25.0: 73525, 26.0: 41089, 27.0: 40458, 28.0: 1, 29.0: 85846, 30.0: 50127, 31.0: 6945, 32.0: 37696, 33.0: 61271, 35.0: 31073, 36.0: 20086, 38.0: 44772, 41.0: 33497, 42.0: 2502, 43.0: 19287, 44.0: 53224, 45.0: 30906, 46.0: 34998, 48.0: 21608, 49.0: 21488, 50.0: 48979, 51.0: 16534, 54.0: 88148, 56.0: 54701, 57.0: 9305, 58.0: 29553, 59.0: 29231, 60.0: 23130, 61.0: 11425, 63.0: 34410, 64.0: 44914, 65.0: 59297, 66.0: 79114, 68.0: 16361, 69.0: 71263, 70.0: 59621, 71.0: 41327, 73.0: 36157, 74.0: 60960, 75.0: 55193, 76.0: 41769, 77.0: 10562, 79.0: 55471, 80.0: 34034, 82.0: 60761, 83.0: 60159, 84.0: 13557, 85.0: 58275, 86.0: 34592, 87.0: 32660, 89.0: 50201, 91.0: 40585, 92.0: 20596, 93.0: 42522, 94.0: 30237, 95.0: 27240, 96.0: 86644, 98.0: 25066, 99.0: 53341, 101.0: 32912, 102.0: 14543, 104.0: 34917, 105.0: 178, 107.0: 23534, 111.0: 62427, 112.0: 29649, 114.0: 19121, 116.0: 53195, 117.0: 52072, 118.0: 30320, 120.0: 29864, 121.0: 75383, 122.0: 19654, 124.0: 46496, 126.0: 19450, 128.0: 68201, 130.0: 87541, 131.0: 82970, 132.0: 37651, 134.0: 19328, 135.0: 51512, 137.0: 41429, 138.0: 14441, 144.0: 69375, 146.0: 49205, 148.0: 4110, 149.0: 23041, 150.0: 67470, 151.0: 40089, 152.0: 82291, 153.0: 29619, 155.0: 21441, 156.0: 66259, 158.0: 41935, 161.0: 76982, 162.0: 42364, 163.0: 51635, 164.0: 40065, 165.0: 51833, 166.0: 55501, 167.0: 34618, 168.0: 31796, 169.0: 17208, 171.0: 56950, 172.0: 39049, 174.0: 59295, 175.0: 111755, 176.0: 13139, 177.0: 19068, 179.0: 22615, 181.0: 40747, 182.0: 55514, 183.0: 57418, 184.0: 25213, 186.0: 42519, 187.0: 33449, 188.0: 25910, 189.0: 41273, 190.0: 38652, 191.0: 19857, 193.0: 40942, 194.0: 45616, 196.0: 22607, 197.0: 21175, 199.0: 66854, 200.0: 60824, 202.0: 94322, 203.0: 9636, 204.0: 49863, 205.0: 42652, 206.0: 66427, 207.0: 15028, 208.0: 14667, 210.0: 64917, 212.0: 62093, 213.0: 61855, 214.0: 26949, 215.0: 69478, 216.0: 50878, 219.0: 18079, 220.0: 16957, 222.0: 80859, 223.0: 36449, 227.0: 34013, 228.0: 21643, 229.0: 35312, 230.0: 25521, 231.0: 33702, 232.0: 11979, 233.0: 9, 234.0: 15706, 235.0: 44143, 236.0: 39176, 237.0: 9998, 239.0: 56562, 241.0: 16343, 242.0: 55606, 245.0: 21362, 247.0: 22477, 248.0: 28299, 249.0: 3684, 251.0: 8640, 252.0: 26933, 253.0: 21876, 254.0: 53075, 255.0: 28161, 257.0: 25619, 258.0: 20383, 259.0: 17409, 260.0: 14637, 261.0: 43804, 262.0: 25508, 263.0: 32605, 264.0: 3481, 265.0: 10951, 267.0: 7386, 268.0: 39882, 269.0: 38254, 270.0: 11685, 271.0: 17374, 273.0: 42920, 275.0: 40831, 277.0: 82082, 278.0: 29890, 280.0: 26286, 281.0: 52305, 284.0: 24893, 288.0: 1169, 289.0: 89637, 291.0: 23710, 294.0: 6157, 299.0: 20247, 301.0: 9120, 302.0: 20505, 304.0: 17556, 307.0: 5958, 308.0: 43634, 309.0: 9563, 310.0: 5820, 311.0: 5573, 313.0: 12, 316.0: 33193, 318.0: 32829, 322.0: 28841, 323.0: 29678, 324.0: 21198, 327.0: 9687, 329.0: 44166, 330.0: 4213, 333.0: 9635, 335.0: 27211, 336.0: 25084, 337.0: 1, 340.0: 19561, 342.0: 16588, 348.0: 12224, 349.0: 5120, 353.0: 52970, 355.0: 28098, 358.0: 28218, 359.0: 31462, 361.0: 30444, 362.0: 6949, 363.0: 15085, 364.0: 37153, 366.0: 11887, 367.0: 19354, 368.0: 16528, 369.0: 7037, 370.0: 10549, 371.0: 11100, 372.0: 14615, 373.0: 9723, 374.0: 12101, 375.0: 12825, 376.0: 14436, 378.0: 23491, 379.0: 36928, 381.0: 12364, 382.0: 12093, 383.0: 7118, 384.0: 16471, 385.0: 19605, 386.0: 9391, 387.0: 28610, 392.0: 20108, 393.0: 8432, 395.0: 7164, 400.0: 13163, 402.0: 4, 403.0: 26521, 407.0: 19382, 408.0: 15200, 412.0: 3947, 413.0: 7695, 414.0: 6435, 416.0: 40648, 417.0: 8537, 418.0: 33726, 419.0: 1, 420.0: 8244, 422.0: 13338, 423.0: 8910, 424.0: 13850, 425.0: 13724, 426.0: 49185, 427.0: 9579, 428.0: 11086, 429.0: 11305, 431.0: 4728, 432.0: 44953, 433.0: 36049, 434.0: 9062, 435.0: 51369, 436.0: 9524, 440.0: 30685, 441.0: 35370, 442.0: 4, 443.0: 734, 444.0: 44854, 447.0: 95, 448.0: 28471, 449.0: 57176, 453.0: 10419, 454.0: 6668, 455.0: 12442, 456.0: 1965, 457.0: 8188, 458.0: 30156, 459.0: 8315, 460.0: 9189, 461.0: 14146, 462.0: 2772, 464.0: 10049, 465.0: 7799, 466.0: 27110, 467.0: 12930, 468.0: 29480, 469.0: 4684, 471.0: 4785, 472.0: 9273, 473.0: 9344, 474.0: 8351, 475.0: 6292, 476.0: 11420, 477.0: 14882, 478.0: 16154, 479.0: 18420, 480.0: 11938, 481.0: 4480, 482.0: 3400, 483.0: 5679, 484.0: 8612, 485.0: 5363, 486.0: 8416, 487.0: 8555, 488.0: 8669, 489.0: 15158, 490.0: 9535, 491.0: 12334, 492.0: 21675, 493.0: 7562, 494.0: 4927, 496.0: 4110, 497.0: 6966, 498.0: 7154, 499.0: 8779, 500.0: 8973, 501.0: 5017, 502.0: 3529, 503.0: 647, 504.0: 4853, 505.0: 3811, 506.0: 4901, 507.0: 2119, 508.0: 2308, 509.0: 3315, 511.0: 2939, 512.0: 7053, 513.0: 3202, 515.0: 23304, 516.0: 31471, 517.0: 12904, 518.0: 8226, 519.0: 6348, 520.0: 935, 521.0: 3834, 522.0: 6132, 523.0: 511, 524.0: 7394, 525.0: 6205, 526.0: 6359, 527.0: 6526, 528.0: 2003, 529.0: 3565, 530.0: 10123, 531.0: 2749, 532.0: 2479, 533.0: 2789, 534.0: 11732, 535.0: 4816, 536.0: 5473, 537.0: 3818, 538.0: 3203, 539.0: 2151, 540.0: 398, 541.0: 148, 542.0: 251, 543.0: 627, 544.0: 738, 545.0: 498, 546.0: 655, 547.0: 79, 548.0: 117, 549.0: 24, 550.0: 10, 551.0: 43, 552.0: 38, 553.0: 13, 554.0: 57, 556.0: 81}\n",
-      "Estadísticas de la estación 556:     Id_recorrido duracion_recorrido fecha_origen_recorrido  \\\n",
-      "0       22819938                 25    2024-08-30 10:10:30   \n",
-      "1       22807595                774    2024-08-29 13:52:04   \n",
-      "2       22818388               1132    2024-08-30 08:29:57   \n",
-      "3       22811663               1814    2024-08-29 17:26:47   \n",
-      "4       22804407               1257    2024-08-29 10:14:24   \n",
-      "..           ...                ...                    ...   \n",
-      "76      22770360               1514    2024-08-26 20:17:19   \n",
-      "77      22764042                829    2024-08-26 13:54:32   \n",
-      "78      22777068                962    2024-08-27 12:58:21   \n",
-      "79      22785014               5749    2024-08-27 21:11:20   \n",
-      "80      22773656               1164    2024-08-27 08:44:24   \n",
-      "\n",
-      "    id_estacion_origen        nombre_estacion_origen  \\\n",
-      "0                  556                 230 - AREVALO   \n",
-      "1                  215               113 - Guatemala   \n",
-      "2                  316              205 - SAN MARTIN   \n",
-      "3                  466   333 - PARQUE DE LA ESTACIÓN   \n",
-      "4                  466   333 - PARQUE DE LA ESTACIÓN   \n",
-      "..                 ...                           ...   \n",
-      "76                 236  254 - Plaza Rafael Hernandez   \n",
-      "77                  99                 099 - Malabia   \n",
-      "78                 361         258 - Plaza J.J. Paso   \n",
-      "79                  14                014 - Pacifico   \n",
-      "80                   9        009 - Parque Las Heras   \n",
-      "\n",
-      "            direccion_estacion_origen  long_estacion_origen  \\\n",
-      "0                        Arévalo 1408            -58.443602   \n",
-      "1                      Guatemala 4773            -58.424996   \n",
-      "2                    1471 Cucha Cucha            -58.453475   \n",
-      "3   Dr. Tomás Manuel de Anchorena 170            -58.411840   \n",
-      "4   Dr. Tomás Manuel de Anchorena 170            -58.411840   \n",
-      "..                                ...                   ...   \n",
-      "76            Vuelta de Obligado 2004            -58.455166   \n",
-      "77               780 Malabia & Loyola            -58.435408   \n",
-      "78                        1399 Moldes            -58.453608   \n",
-      "79  Santa Fe Av. & Bullrich, Int. Av.            -58.426387   \n",
-      "80      2300 Diaz, Cnel. Av. & French            -58.407741   \n",
-      "\n",
-      "    lat_estacion_origen fecha_destino_recorrido  id_estacion_destino  \\\n",
-      "0            -34.583613     2024-08-30 10:10:55                556.0   \n",
-      "1            -34.585878     2024-08-29 14:04:58                556.0   \n",
-      "2            -34.605567     2024-08-30 08:48:49                556.0   \n",
-      "3            -34.608096     2024-08-29 17:57:01                556.0   \n",
-      "4            -34.608096     2024-08-29 10:35:21                556.0   \n",
-      "..                  ...                     ...                  ...   \n",
-      "76           -34.562161     2024-08-26 20:42:33                556.0   \n",
-      "77           -34.596096     2024-08-26 14:08:21                556.0   \n",
-      "78           -34.569187     2024-08-27 13:14:23                556.0   \n",
-      "79           -34.577424     2024-08-27 22:47:09                556.0   \n",
-      "80           -34.585443     2024-08-27 09:03:48                556.0   \n",
-      "\n",
-      "   nombre_estacion_destino direccion_estacion_destino  long_estacion_destino  \\\n",
-      "0            230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "1            230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "2            230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "3            230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "4            230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "..                     ...                        ...                    ...   \n",
-      "76           230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "77           230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "78           230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "79           230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "80           230 - AREVALO               Arévalo 1408             -58.443602   \n",
-      "\n",
-      "   lat_estacion_destino  id_usuario modelo_bicicleta  género edad_usuario  \\\n",
-      "0            -34.583613     1197923              FIT    MALE         61.0   \n",
-      "1            -34.583613      207539              FIT    MALE          NaN   \n",
-      "2            -34.583613     1172517              FIT    MALE         31.0   \n",
-      "3            -34.583613      596026              FIT  FEMALE          NaN   \n",
-      "4            -34.583613     1118755           ICONIC    MALE         66.0   \n",
-      "..                  ...         ...              ...     ...          ...   \n",
-      "76           -34.583613     1195169              FIT  FEMALE         38.0   \n",
-      "77           -34.583613     1185114           ICONIC  FEMALE         23.0   \n",
-      "78           -34.583613      477108              FIT   OTHER          NaN   \n",
-      "79           -34.583613     1197517              FIT  FEMALE         20.0   \n",
-      "80           -34.583613      752070              FIT    MALE         37.0   \n",
-      "\n",
-      "    fecha_alta hora_alta  \n",
-      "0   2024-08-28  17:09:02  \n",
-      "1          NaN       NaN  \n",
-      "2   2024-07-01  10:42:57  \n",
-      "3          NaN       NaN  \n",
-      "4   2024-02-27  13:56:01  \n",
-      "..         ...       ...  \n",
-      "76  2024-08-22  14:25:17  \n",
-      "77  2024-07-30  01:36:23  \n",
-      "78         NaN       NaN  \n",
-      "79  2024-08-27  20:32:27  \n",
-      "80  2021-02-25  19:30:31  \n",
-      "\n",
-      "[81 rows x 20 columns]\n"
+      "Llegadas de cada estación: {2.0: 33391, 3.0: 47655, 4.0: 43729, 5.0: 102730, 6.0: 41035, 7.0: 17150, 8.0: 102291, 9.0: 90876, 12.0: 48765, 13.0: 32637, 14.0: 127526, 17.0: 65406, 20.0: 23897, 21.0: 26031, 22.0: 31567, 23.0: 34502, 24.0: 18015, 25.0: 73525, 26.0: 41089, 27.0: 40458, 28.0: 1, 29.0: 85846, 30.0: 50127, 31.0: 6945, 32.0: 37696, 33.0: 61271, 35.0: 31073, 36.0: 20086, 38.0: 44772, 41.0: 33497, 42.0: 2502, 43.0: 19287, 44.0: 53224, 45.0: 30906, 46.0: 34998, 48.0: 21608, 49.0: 21488, 50.0: 48979, 51.0: 16534, 54.0: 88148, 56.0: 54701, 57.0: 9305, 58.0: 29553, 59.0: 29231, 60.0: 23130, 61.0: 11425, 63.0: 34410, 64.0: 44914, 65.0: 59297, 66.0: 79114, 68.0: 16361, 69.0: 71263, 70.0: 59621, 71.0: 41327, 73.0: 36157, 74.0: 60960, 75.0: 55193, 76.0: 41769, 77.0: 10562, 79.0: 55471, 80.0: 34034, 82.0: 60761, 83.0: 60159, 84.0: 13557, 85.0: 58275, 86.0: 34592, 87.0: 32660, 89.0: 50201, 91.0: 40585, 92.0: 20596, 93.0: 42522, 94.0: 30237, 95.0: 27240, 96.0: 86644, 98.0: 25066, 99.0: 53341, 101.0: 32912, 102.0: 14543, 104.0: 34917, 105.0: 178, 107.0: 23534, 111.0: 62427, 112.0: 29649, 114.0: 19121, 116.0: 53195, 117.0: 52072, 118.0: 30320, 120.0: 29864, 121.0: 75383, 122.0: 19654, 124.0: 46496, 126.0: 19450, 128.0: 68201, 130.0: 87541, 131.0: 82970, 132.0: 37651, 134.0: 19328, 135.0: 51512, 137.0: 41429, 138.0: 14441, 144.0: 69375, 146.0: 49205, 148.0: 4110, 149.0: 23041, 150.0: 67470, 151.0: 40089, 152.0: 82291, 153.0: 29619, 155.0: 21441, 156.0: 66259, 158.0: 41935, 161.0: 76982, 162.0: 42364, 163.0: 51635, 164.0: 40065, 165.0: 51833, 166.0: 55501, 167.0: 34618, 168.0: 31796, 169.0: 17208, 171.0: 56950, 172.0: 39049, 174.0: 59295, 175.0: 111755, 176.0: 13139, 177.0: 19068, 179.0: 22615, 181.0: 40747, 182.0: 55514, 183.0: 57418, 184.0: 25213, 186.0: 42519, 187.0: 33449, 188.0: 25910, 189.0: 41273, 190.0: 38652, 191.0: 19857, 193.0: 40942, 194.0: 45616, 196.0: 22607, 197.0: 21175, 199.0: 66854, 200.0: 60824, 202.0: 94322, 203.0: 9636, 204.0: 49863, 205.0: 42652, 206.0: 66427, 207.0: 15028, 208.0: 14667, 210.0: 64917, 212.0: 62093, 213.0: 61855, 214.0: 26949, 215.0: 69478, 216.0: 50878, 219.0: 18079, 220.0: 16957, 222.0: 80859, 223.0: 36449, 227.0: 34013, 228.0: 21643, 229.0: 35312, 230.0: 25521, 231.0: 33702, 232.0: 11979, 233.0: 9, 234.0: 15706, 235.0: 44143, 236.0: 39176, 237.0: 9998, 239.0: 56562, 241.0: 16343, 242.0: 55606, 245.0: 21362, 247.0: 22477, 248.0: 28299, 249.0: 3684, 251.0: 8640, 252.0: 26933, 253.0: 21876, 254.0: 53075, 255.0: 28161, 257.0: 25619, 258.0: 20383, 259.0: 17409, 260.0: 14637, 261.0: 43804, 262.0: 25508, 263.0: 32605, 264.0: 3481, 265.0: 10951, 267.0: 7386, 268.0: 39882, 269.0: 38254, 270.0: 11685, 271.0: 17374, 273.0: 42920, 275.0: 40831, 277.0: 82082, 278.0: 29890, 280.0: 26286, 281.0: 52305, 284.0: 24893, 288.0: 1169, 289.0: 89637, 291.0: 23710, 294.0: 6157, 299.0: 20247, 301.0: 9120, 302.0: 20505, 304.0: 17556, 307.0: 5958, 308.0: 43634, 309.0: 9563, 310.0: 5820, 311.0: 5573, 313.0: 12, 316.0: 33193, 318.0: 32829, 322.0: 28841, 323.0: 29678, 324.0: 21198, 327.0: 9687, 329.0: 44166, 330.0: 4213, 333.0: 9635, 335.0: 27211, 336.0: 25084, 337.0: 1, 340.0: 19561, 342.0: 16588, 348.0: 12224, 349.0: 5120, 353.0: 52970, 355.0: 28098, 358.0: 28218, 359.0: 31462, 361.0: 30444, 362.0: 6949, 363.0: 15085, 364.0: 37153, 366.0: 11887, 367.0: 19354, 368.0: 16528, 369.0: 7037, 370.0: 10549, 371.0: 11100, 372.0: 14615, 373.0: 9723, 374.0: 12101, 375.0: 12825, 376.0: 14436, 378.0: 23491, 379.0: 36928, 381.0: 12364, 382.0: 12093, 383.0: 7118, 384.0: 16471, 385.0: 19605, 386.0: 9391, 387.0: 28610, 392.0: 20108, 393.0: 8432, 395.0: 7164, 400.0: 13163, 402.0: 4, 403.0: 26521, 407.0: 19382, 408.0: 15200, 412.0: 3947, 413.0: 7695, 414.0: 6435, 416.0: 40648, 417.0: 8537, 418.0: 33726, 419.0: 1, 420.0: 8244, 422.0: 13338, 423.0: 8910, 424.0: 13850, 425.0: 13724, 426.0: 49185, 427.0: 9579, 428.0: 11086, 429.0: 11305, 431.0: 4728, 432.0: 44953, 433.0: 36049, 434.0: 9062, 435.0: 51369, 436.0: 9524, 440.0: 30685, 441.0: 35370, 442.0: 4, 443.0: 734, 444.0: 44854, 447.0: 95, 448.0: 28471, 449.0: 57176, 453.0: 10419, 454.0: 6668, 455.0: 12442, 456.0: 1965, 457.0: 8188, 458.0: 30156, 459.0: 8315, 460.0: 9189, 461.0: 14146, 462.0: 2772, 464.0: 10049, 465.0: 7799, 466.0: 27110, 467.0: 12930, 468.0: 29480, 469.0: 4684, 471.0: 4785, 472.0: 9273, 473.0: 9344, 474.0: 8351, 475.0: 6292, 476.0: 11420, 477.0: 14882, 478.0: 16154, 479.0: 18420, 480.0: 11938, 481.0: 4480, 482.0: 3400, 483.0: 5679, 484.0: 8612, 485.0: 5363, 486.0: 8416, 487.0: 8555, 488.0: 8669, 489.0: 15158, 490.0: 9535, 491.0: 12334, 492.0: 21675, 493.0: 7562, 494.0: 4927, 496.0: 4110, 497.0: 6966, 498.0: 7154, 499.0: 8779, 500.0: 8973, 501.0: 5017, 502.0: 3529, 503.0: 647, 504.0: 4853, 505.0: 3811, 506.0: 4901, 507.0: 2119, 508.0: 2308, 509.0: 3315, 511.0: 2939, 512.0: 7053, 513.0: 3202, 515.0: 23304, 516.0: 31471, 517.0: 12904, 518.0: 8226, 519.0: 6348, 520.0: 935, 521.0: 3834, 522.0: 6132, 523.0: 511, 524.0: 7394, 525.0: 6205, 526.0: 6359, 527.0: 6526, 528.0: 2003, 529.0: 3565, 530.0: 10123, 531.0: 2749, 532.0: 2479, 533.0: 2789, 534.0: 11732, 535.0: 4816, 536.0: 5473, 537.0: 3818, 538.0: 3203, 539.0: 2151, 540.0: 398, 541.0: 148, 542.0: 251, 543.0: 627, 544.0: 738, 545.0: 498, 546.0: 655, 547.0: 79, 548.0: 117, 549.0: 24, 550.0: 10, 551.0: 43, 552.0: 38, 553.0: 13, 554.0: 57, 556.0: 81}\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(aux_d)\n",
     "estaciones_sin_llegadas = aux_d.count_station_arrivals(df_unificado)\n",
-    "print(\"Llegadas de cada estación:\", estaciones_sin_llegadas)\n",
-    "\n",
-    "stats_estaciones = aux_d.filter_by_value(df_unificado, 'id_estacion_destino', 556.0)\n",
-    "print(\"Estadísticas de la estación 556:\", stats_estaciones)"
+    "print(\"Llegadas de cada estación:\", estaciones_sin_llegadas)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141d1bcc",
+   "metadata": {},
+   "source": [
+    "Hacer un grafo de todos los viajes entre estaciones (hacer que si hay mas viajes sea mas grande y mas oscuro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3da0a0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\felic\\AppData\\Local\\Temp\\ipykernel_18932\\3294792341.py:2: DtypeWarning: Columns (1,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_unificado_23_24 = pd.read_csv(df_unificado_23_24_path)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_unificado_23_24_path = os.path.join(BASE_DIR, '..', 'data', 'clean', 'unificado_23_24.csv')\n",
+    "df_unificado_23_24 = pd.read_csv(df_unificado_23_24_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10809101",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
