--- a/src_main/features_2/Limited_stations_info.ipynb
+++ b/src_main/features_2/Limited_stations_info.ipynb
@@ -12,40 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "145d1edc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import importlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66edf31e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import models as md\n",
+    "import models_f2 as md2\n",
     "import feature_engineering as fe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2dfca353",
    "metadata": {},
    "outputs": [],
@@ -58,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "2650e09d",
    "metadata": {},
    "outputs": [],
@@ -69,13 +62,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef1d8ca2",
+   "metadata": {},
+   "source": [
+    "Creamos un dataset que solo usa la estación de la facultad de derecho porque es la que más viajes tiene."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2731cb8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset filtrado: (12108, 5082) → (12108, 402) (estaciones: [202])\n",
+      "=== DIVISIÓN DATASET ESTACIÓN 202 ===\n",
+      "Shape original: (12108, 402)\n",
+      "Features (X): (12108, 40)\n",
+      "Target (y): (12108,)\n",
+      "Target columna: target_estacion_202\n",
+      "Rango de y: 0.00 - 38.00\n",
+      "Media de y: 2.81\n",
+      "Features incluidos: 40\n",
+      "\n",
+      "📊 ESTADÍSTICAS DEL TARGET:\n",
+      "  - Valores nulos: 0\n",
+      "  - Valores cero: 4521\n",
+      "  - Percentiles: 25%=0.00, 50%=1.00, 75%=4.00\n",
+      "Dataset filtrado: (1950, 4970) → (1950, 394) (estaciones: [202])\n",
+      "Dataset dividido estación 202: X(1950, 40), y(1950,)\n",
+      "Dataset filtrado: (2037, 5096) → (2037, 403) (estaciones: [202])\n",
+      "Dataset dividido estación 202: X(2037, 40), y(2037,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 202"
+    "# 202\n",
+    "importlib.reload(fe)\n",
+    "df_filtrado_train_202 = fe.filtrar_dataset_por_estaciones(train_f2, [202], verbose=False)\n",
+    "X_train_202, y_train_202, feature_names_train_202 = fe.dividir_dataset_estacion(df_filtrado_train_202, 202)\n",
+    "\n",
+    "df_filtrado_val_202 = fe.filtrar_dataset_por_estaciones(val_f2, [202], verbose=False)\n",
+    "X_val_202, y_val_202, feature_names_val_202 = fe.dividir_dataset_estacion(df_filtrado_val_202, 202, verbose=False)\n",
+    "\n",
+    "df_filtrado_test_202 = fe.filtrar_dataset_por_estaciones(test_f2, [202], verbose=False)\n",
+    "X_test_202, y_test_202, feature_names_test_202 = fe.dividir_dataset_estacion(df_filtrado_test_202, 202, verbose=False)\n",
+    "\n"
    ]
   },
   {
