reg lineal para facultad de derecho

--- a/src_main/features_2/Limited_stations_info.ipynb
+++ b/src_main/features_2/Limited_stations_info.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "145d1edc",
    "metadata": {},
    "outputs": [],
@@ -27,18 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "66edf31e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import models_f2 as md2\n",
-    "import feature_engineering as fe"
+    "import data_processing as dp\n",
+    "import metrics as mt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "2dfca353",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "2650e09d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "2731cb8e",
    "metadata": {},
    "outputs": [
@@ -79,38 +80,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset filtrado: (12108, 5082) → (12108, 402) (estaciones: [202])\n",
+      "Dataset filtrado: (12108, 5082) → (12108, 401) (estaciones: [202])\n",
+      "✓ Columna 'hora' convertida a hora (0-23)\n",
       "=== DIVISIÓN DATASET ESTACIÓN 202 ===\n",
-      "Shape original: (12108, 402)\n",
-      "Features (X): (12108, 40)\n",
+      "Shape original: (12108, 401)\n",
+      "Features (X): (12108, 39)\n",
       "Target (y): (12108,)\n",
       "Target columna: target_estacion_202\n",
       "Rango de y: 0.00 - 38.00\n",
       "Media de y: 2.81\n",
-      "Features incluidos: 40\n",
+      "Features incluidos: 39\n",
       "\n",
       "📊 ESTADÍSTICAS DEL TARGET:\n",
       "  - Valores nulos: 0\n",
       "  - Valores cero: 4521\n",
       "  - Percentiles: 25%=0.00, 50%=1.00, 75%=4.00\n",
-      "Dataset filtrado: (1950, 4970) → (1950, 394) (estaciones: [202])\n",
-      "Dataset dividido estación 202: X(1950, 40), y(1950,)\n",
-      "Dataset filtrado: (2037, 5096) → (2037, 403) (estaciones: [202])\n",
-      "Dataset dividido estación 202: X(2037, 40), y(2037,)\n"
+      "Dataset filtrado: (1950, 4970) → (1950, 393) (estaciones: [202])\n",
+      "Dataset dividido estación 202: X(1950, 39), y(1950,)\n",
+      "Dataset filtrado: (2037, 5096) → (2037, 402) (estaciones: [202])\n",
+      "Dataset dividido estación 202: X(2037, 39), y(2037,)\n"
      ]
     }
    ],
    "source": [
     "# 202\n",
-    "importlib.reload(fe)\n",
-    "df_filtrado_train_202 = fe.filtrar_dataset_por_estaciones(train_f2, [202], verbose=False)\n",
-    "X_train_202, y_train_202, feature_names_train_202 = fe.dividir_dataset_estacion(df_filtrado_train_202, 202)\n",
+    "importlib.reload(dp)\n",
+    "df_filtrado_train_202 = dp.filtrar_dataset_por_estaciones(train_f2, [202], verbose=False)\n",
+    "X_train_202, y_train_202, feature_names_train_202 = dp.dividir_dataset_estacion(df_filtrado_train_202, 202)\n",
     "\n",
-    "df_filtrado_val_202 = fe.filtrar_dataset_por_estaciones(val_f2, [202], verbose=False)\n",
-    "X_val_202, y_val_202, feature_names_val_202 = fe.dividir_dataset_estacion(df_filtrado_val_202, 202, verbose=False)\n",
+    "df_filtrado_val_202 = dp.filtrar_dataset_por_estaciones(val_f2, [202], verbose=False)\n",
+    "X_val_202, y_val_202, feature_names_val_202 = dp.dividir_dataset_estacion(df_filtrado_val_202, 202, verbose=False)\n",
     "\n",
-    "df_filtrado_test_202 = fe.filtrar_dataset_por_estaciones(test_f2, [202], verbose=False)\n",
-    "X_test_202, y_test_202, feature_names_test_202 = fe.dividir_dataset_estacion(df_filtrado_test_202, 202, verbose=False)\n",
+    "df_filtrado_test_202 = dp.filtrar_dataset_por_estaciones(test_f2, [202], verbose=False)\n",
+    "X_test_202, y_test_202, feature_names_test_202 = dp.dividir_dataset_estacion(df_filtrado_test_202, 202, verbose=False)\n",
     "\n"
    ]
   },
@@ -125,11 +127,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "69b8c276",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "importlib.reload(md2)\n",
+    "pred_202 = md2.linear_regression(X_train_202, y_train_202, X_val_202)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0097c48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "MÉTRICAS DE REGRESIÓN - Linear Regression\n",
+      "============================================================\n",
+      "                           Métrica      Linear Regression\n",
+      "               Mean Absolute Error                 1.2021\n",
+      "                Mean Squared Error                 3.5738\n",
+      "           Root Mean Squared Error                 1.8905\n",
+      "                         R-squared                 0.6643\n",
+      "Mean Absolute Percentage Error (%) 155611118851783136.00%\n",
+      "                Explained Variance                 0.6700\n",
+      "                     Maximum Error                12.7255\n",
+      "                       Correlation                 0.8195\n",
+      "                              Bias                 0.2466\n",
+      "                Relative Error (%)         3455260969.35%\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(mt)\n",
+    "metricas, tabla = mt.evaluar_rapido(y_val_202, pred_202, \"Linear Regression\")"
+   ]
   },
   {
    "cell_type": "markdown",
