--- a/src_main/features_2/Limited_stations_info.ipynb
+++ b/src_main/features_2/Limited_stations_info.ipynb
@@ -64,9 +64,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef1d8ca2",
+   "id": "4626ecd1",
    "metadata": {},
    "source": [
+    "# Modelos básicos\n",
+    "Corremos modelos básicos con hiperparámetros arbitrarios para ver como es la situación actual. Mostramos para cada modelo las métricas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "049a7e47",
+   "metadata": {},
+   "source": [
+    "### Predicción 202 solo con 202\n",
     "Creamos un dataset que solo usa la estación de la facultad de derecho porque es la que más viajes tiene."
    ]
   },
@@ -114,15 +124,6 @@
     "df_filtrado_test_202 = dp.filtrar_dataset_por_estaciones(test_f2, [202], verbose=False)\n",
     "X_test_202, y_test_202, feature_names_test_202 = dp.dividir_dataset_estacion(df_filtrado_test_202, 202, verbose=False)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4626ecd1",
-   "metadata": {},
-   "source": [
-    "# Modelos básicos\n",
-    "Corremos modelos básicos con hiperparámetros arbitrarios para ver como es la situación actual. Mostramos para cada modelo las métricas."
    ]
   },
   {
