--- a/src_main/features_2/Limited_stations_info.ipynb
+++ b/src_main/features_2/Limited_stations_info.ipynb
@@ -188,6 +188,211 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "116041b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Random Forest Regressor...\n",
+      "Training Gradient Boosting Regressor...\n",
+      "Training Decision Tree Regressor...\n",
+      "Training KNN Regressor...\n",
+      "Training Ridge Regression...\n",
+      "Training Lasso Regression...\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(md2)\n",
+    "print(\"Training Random Forest Regressor...\")\n",
+    "pred_202_rf = md2.random_forest_regressor(X_train_202, y_train_202, X_val_202)\n",
+    "print(\"Training Gradient Boosting Regressor...\")\n",
+    "pred_202_gb = md2.gradient_boosting_regressor(X_train_202, y_train_202, X_val_202)\n",
+    "print(\"Training Decision Tree Regressor...\")\n",
+    "pred_202_dt = md2.decision_tree_regressor(X_train_202, y_train_202, X_val_202)\n",
+    "print(\"Training KNN Regressor...\")\n",
+    "pred_202_knn = md2.knn_regressor(X_train_202, y_train_202, X_val_202)\n",
+    "# print(\"Training SVR Regressor...\")\n",
+    "# pred_202_svr = md2.svr_regressor(X_train_202, y_train_202, X_val_202)\n",
+    "print(\"Training Ridge Regression...\")\n",
+    "pred_202_lr_ridge = md2.ridge_regression(X_train_202, y_train_202, X_val_202)\n",
+    "print(\"Training Lasso Regression...\")\n",
+    "pred_202_lr_lasso = md2.lasso_regression(X_train_202, y_train_202, X_val_202)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "689d0b43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🏆 MEJOR MODELO: Random Forest Regressor\n",
+      "   R² = 0.6987 | RMSE = 1.7910 | MAE = 1.0041\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Modelo</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>R²</th>\n",
+       "      <th>MAPE (%)</th>\n",
+       "      <th>Correlación</th>\n",
+       "      <th>N_Muestras</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>1.0041</td>\n",
+       "      <td>1.7910</td>\n",
+       "      <td>0.6987</td>\n",
+       "      <td>7.945505e+16</td>\n",
+       "      <td>0.8437</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Gradient Boosting Regressor</td>\n",
+       "      <td>1.0233</td>\n",
+       "      <td>1.8256</td>\n",
+       "      <td>0.6869</td>\n",
+       "      <td>8.706279e+16</td>\n",
+       "      <td>0.8339</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1.1942</td>\n",
+       "      <td>1.8732</td>\n",
+       "      <td>0.6704</td>\n",
+       "      <td>1.578436e+17</td>\n",
+       "      <td>0.8243</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ridge Regression</td>\n",
+       "      <td>1.2035</td>\n",
+       "      <td>1.8909</td>\n",
+       "      <td>0.6641</td>\n",
+       "      <td>1.561083e+17</td>\n",
+       "      <td>0.8195</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Lasso Regression</td>\n",
+       "      <td>1.3314</td>\n",
+       "      <td>1.9594</td>\n",
+       "      <td>0.6394</td>\n",
+       "      <td>1.993967e+17</td>\n",
+       "      <td>0.8074</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>KNN Regressor</td>\n",
+       "      <td>1.0775</td>\n",
+       "      <td>2.0296</td>\n",
+       "      <td>0.6131</td>\n",
+       "      <td>6.420516e+16</td>\n",
+       "      <td>0.8104</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Decision Tree Regressor</td>\n",
+       "      <td>1.3179</td>\n",
+       "      <td>2.5488</td>\n",
+       "      <td>0.3898</td>\n",
+       "      <td>6.212658e+16</td>\n",
+       "      <td>0.7287</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank                       Modelo     MAE    RMSE      R²      MAPE (%)  \\\n",
+       "0     1      Random Forest Regressor  1.0041  1.7910  0.6987  7.945505e+16   \n",
+       "1     2  Gradient Boosting Regressor  1.0233  1.8256  0.6869  8.706279e+16   \n",
+       "2     3            Linear Regression  1.1942  1.8732  0.6704  1.578436e+17   \n",
+       "3     4             Ridge Regression  1.2035  1.8909  0.6641  1.561083e+17   \n",
+       "4     5             Lasso Regression  1.3314  1.9594  0.6394  1.993967e+17   \n",
+       "5     6                KNN Regressor  1.0775  2.0296  0.6131  6.420516e+16   \n",
+       "6     7      Decision Tree Regressor  1.3179  2.5488  0.3898  6.212658e+16   \n",
+       "\n",
+       "   Correlación  N_Muestras  \n",
+       "0       0.8437        1950  \n",
+       "1       0.8339        1950  \n",
+       "2       0.8243        1950  \n",
+       "3       0.8195        1950  \n",
+       "4       0.8074        1950  \n",
+       "5       0.8104        1950  \n",
+       "6       0.7287        1950  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# comparación de modelos\n",
+    "importlib.reload(mt)\n",
+    "modelos_predicciones = {'Linear Regression' : pred_202,\n",
+    "        'Random Forest Regressor' : pred_202_rf,\n",
+    "        'Gradient Boosting Regressor' : pred_202_gb,\n",
+    "        'Decision Tree Regressor' : pred_202_dt,\n",
+    "        'KNN Regressor' : pred_202_knn,\n",
+    "        # 'SVR Regressor' : pred_202_svr,\n",
+    "        'Ridge Regression' : pred_202_lr_ridge,\n",
+    "        'Lasso Regression' : pred_202_lr_lasso}\n",
+    "\n",
+    "mt.tabla_metricas_modelos(modelos_predicciones, y_val_202)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8485aac6",
    "metadata": {},
