--- a/src_main/features_2/Limited_stations_info.ipynb
+++ b/src_main/features_2/Limited_stations_info.ipynb
@@ -729,7 +729,74 @@
    "id": "b9945a68",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def graficar_pca(X_train, y_train, percentile_cutoff=80):\n",
+    "    from sklearn.decomposition import PCA\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "    import pandas as pd\n",
+    "    \n",
+    "    # Combinar X e y para filtrar por valor del target\n",
+    "    combined = pd.DataFrame(X_train.copy())\n",
+    "    combined['target'] = y_train\n",
+    "    \n",
+    "    # Calcular el valor de corte del percentil\n",
+    "    cutoff_value = combined['target'].quantile(percentile_cutoff/100)\n",
+    "    print(f\"Eliminando el {100-percentile_cutoff}% superior de las muestras (target > {cutoff_value})\")\n",
+    "    \n",
+    "    # Filtrar las muestras\n",
+    "    filtered = combined[combined['target'] <= cutoff_value]\n",
+    "    \n",
+    "    # Separar nuevamente X e y\n",
+    "    X_filtered = filtered.drop('target', axis=1)\n",
+    "    y_filtered = filtered['target']\n",
+    "    \n",
+    "    print(f\"Muestras originales: {len(X_train)}, Muestras filtradas: {len(X_filtered)}\")\n",
+    "    \n",
+    "    # Estandarizar los datos\n",
+    "    scaler = StandardScaler()\n",
+    "    X_scaled = scaler.fit_transform(X_filtered)\n",
+    "    \n",
+    "    # Aplicar PCA\n",
+    "    pca = PCA(n_components=2)\n",
+    "    X_pca = pca.fit_transform(X_scaled)\n",
+    "    \n",
+    "    # Graficar los resultados con colores según el target\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    scatter = plt.scatter(X_pca[:, 0], X_pca[:, 1], c=y_filtered, alpha=0.7, cmap='viridis', s=50)\n",
+    "    plt.colorbar(scatter, label='Cantidad de bicis')\n",
+    "    plt.title('PCA de las características de la estación 202 (sin outliers)')\n",
+    "    plt.xlabel('Componente Principal 1')\n",
+    "    plt.ylabel('Componente Principal 2')\n",
+    "    plt.grid(alpha=0.3)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # Mostrar la varianza explicada por cada componente\n",
+    "    explained_variance = pca.explained_variance_ratio_\n",
+    "    print(f\"Varianza explicada por los 2 primeros componentes: {sum(explained_variance)*100:.2f}%\")\n",
+    "    print(f\"Componente 1: {explained_variance[0]*100:.2f}%\")\n",
+    "    print(f\"Componente 2: {explained_variance[1]*100:.2f}%\")\n",
+    "    \n",
+    "    # Analizar importancia de las características\n",
+    "    feature_names = X_filtered.columns\n",
+    "    components_df = pd.DataFrame(pca.components_.T, index=feature_names, columns=['PC1', 'PC2'])\n",
+    "    top_features = pd.concat([\n",
+    "        components_df['PC1'].abs().sort_values(ascending=False).head(10),\n",
+    "        components_df['PC2'].abs().sort_values(ascending=False).head(10)\n",
+    "    ], axis=1)\n",
+    "    \n",
+    "    plt.figure(figsize=(14, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    top_features['PC1'].plot(kind='bar', title='Top 10 características PC1')\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    top_features['PC2'].plot(kind='bar', title='Top 10 características PC2')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    return pca, scaler\n",
+    "\n",
+    "# Aplicar la función a los datos\n",
+    "pca_model, scaler_model = graficar_pca(X_train_202, y_train_202)"
+   ]
   },
   {
    "cell_type": "markdown",
