--- a/src_main/features_2/Limited_stations_info.ipynb
+++ b/src_main/features_2/Limited_stations_info.ipynb
@@ -1463,6 +1463,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ef638a8",
+   "metadata": {},
+   "source": [
+    "INTERPRETACIÓN: \n",
+    "- R^2: es muy dificil ganarle a promedio porque la mayoría de los targets van a ser 0 entonces el modelo va a aprender a hacer lo mismo que hace el aleatorio.\n",
+    "- Error based: empeora con muchas muestras porque con más muestras es más fácil equivocarse.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ddcb9b14",
    "metadata": {},
    "source": [
