--- a/src_main/features_2/Features2_models.ipynb
+++ b/src_main/features_2/Features2_models.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "145d1edc",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import importlib"
    ]
   },
   {
@@ -39,13 +40,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import models as md\n",
-    "import feature_engineering as fe"
+    "import models_f2 as md2\n",
+    "import data_processing_f2 as dp\n",
+    "import metrics as mt\n",
+    "import visualizacion_f2 as vis2\n",
+    "import auxiliares_f2 as aux2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2dfca353",
    "metadata": {},
    "outputs": [],
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2650e09d",
    "metadata": {},
    "outputs": [],
@@ -66,16 +70,6 @@
     "train_f2 = pd.read_csv(train_f2_path)\n",
     "val_f2 = pd.read_csv(val_f2_path)\n",
     "test_f2 = pd.read_csv(test_f2_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2731cb8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 202"
    ]
   },
   {
@@ -88,12 +82,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "792331fa",
+   "metadata": {},
+   "source": [
+    "## 1. Entrenamiento por separado\n",
+    "- solo con si mismas (para cada una)\n",
+    "- cada una entrenada por separado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "691b9ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(dp)\n",
+    "targets =  dp.obtener_targets_disponibles(train_f2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "69b8c276",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lin_reg_all = []\n",
+    "lin_reg_true = []\n",
+    "importlib.reload(md2)\n",
+    "importlib.reload(dp)\n",
+    "\n",
+    "for i in range(len(targets)):\n",
+    "    if i % 10 == 0:\n",
+    "        print(f\"Training Linear Regression for station {targets[i]}...\")\n",
+    "    df_filtrado_train = dp.filtrar_dataset_por_estaciones(train_f2, [targets[i]], verbose=False)\n",
+    "    X_train, y_train, feature_names_train = dp.dividir_dataset_estacion(df_filtrado_train, targets[i], verbose=False)\n",
+    "    \n",
+    "    df_filtrado_val = dp.filtrar_dataset_por_estaciones(val_f2, [targets[i]], verbose=False)\n",
+    "    X_val, y_val, feature_names_val = dp.dividir_dataset_estacion(df_filtrado_val, targets[i], verbose=False)\n",
+    "    lin_reg_true.append(y_val)\n",
+    "    \n",
+    "    pred = md2.linear_regression(X_train, y_train, X_val)\n",
+    "    lin_reg_all.append(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f86b926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(mt)\n",
+    "mt.estadisticas_metricas_por_estacion(lin_reg_true, lin_reg_all, targets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b95b5ba8",
+   "metadata": {},
+   "source": [
+    "Obtenemos una mejor visualización de como la cantidad de llegadas afectan las métricas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24879615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(mt)\n",
+    "importlib.reload(aux2)\n",
+    "mse_vals, r2_vals, mae_vals, rmse_vals, mape_vals = mt.calcular_metricas_multiples(\n",
+    "    lin_reg_true,\n",
+    "    lin_reg_all )\n",
+    "\n",
+    "arribos_dict = aux2.obtener_arribos_por_estacion(train_f2)"
+   ]
   },
   {
    "cell_type": "markdown",
